--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Unity WebGL Player | Legend of Volley</title>
   </head>
-  <body style="text-align: center">
+  <body style="text-align: center; margin:0; overflow:hidden;">
     <canvas id="unity-canvas" style="width: 100%; height: 100%; background: #231F20"></canvas>
     <script src="Build/WebGl.End.loader.js"></script>
     <script>
